--- a/TimePickerDemo.iOS/TimePickerDemo.iOS.csproj
+++ b/TimePickerDemo.iOS/TimePickerDemo.iOS.csproj
@@ -97,12 +97,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TimePickerDemo.csproj">
-      <Project>{3CF08D5F-28DC-411B-9CEC-681B37A44D98}</Project>
-      <Name>TimePickerDemo</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json" />
     <ImageAsset Include="Assets.xcassets\Contents.json" />
   </ItemGroup>
@@ -122,6 +116,12 @@
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="CustomControls\CustomTimePicker24HRenderer.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TimePickerDemo\TimePickerDemo.csproj">
+      <Project>{3B8E7DCA-F0C9-4A08-ADE9-B08BA8092E0B}</Project>
+      <Name>TimePickerDemo</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.4.0.280\build\netstandard1.0\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.4.0.280\build\netstandard1.0\Xamarin.Forms.targets')" />
