--- a/TimePickerDemo.iOS/TimePickerDemo.iOS.csproj
+++ b/TimePickerDemo.iOS/TimePickerDemo.iOS.csproj
@@ -85,7 +85,7 @@
         <Reference Include="Xamarin.iOS" />
     </ItemGroup>
     <ItemGroup>
-        <PackageReference Include="Xamarin.Forms" Version="4.8.0.1560" />
+        <PackageReference Include="Xamarin.Forms" Version="5.0.0.1791-pre5" />
     </ItemGroup>
     <ItemGroup>
         <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Contents.json" />
